--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
           <meta name="description" content="slr's Portfolio">
           <meta itemprop="name" content="Yoshitsu's Portfolio">
           <meta itemprop="description" content="slr's Portfolio">
-          <meta itemprop="image" content="https://te.legra.ph/file/76993558d6cfdfe2ac02a.jpg">
+          <meta itemprop="image" content="https://graph.org/file/a796053f53e6ea7ac9151.jpg">
           <meta http-equiv="X-UA-Compatible" content="ie=edge">
           <script src="https://kit.fontawesome.com/a81368914c.js"></script>
           <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
           <link rel="stylesheet" href="src/style.css">
-          <title>Yoshitsu (@slrded)</title>
-          <link rel="icon" href="https://te.legra.ph/file/76993558d6cfdfe2ac02a.jpg" type="image/x-icon">
+          <title>slr (@slrded)</title>
+          <link rel="icon" href="https://graph.org/file/a796053f53e6ea7ac9151.jpg" type="image/x-icon">
           <meta content="slr's Portfolio" property="og:site_name">
           <meta property="og:type" content="website">
           <meta content="https://slrded.tech/" property="og:url">
           <meta content="slr (@slrded)" property="og:title">
-          <meta content="https://te.legra.ph/file/76993558d6cfdfe2ac02a.jpg" property="og:image">
+          <meta content="https://graph.org/file/a796053f53e6ea7ac9151.jpg" property="og:image">
           <meta content="slr's Portfolio" property="og:description">
      </head>
 <body id="body" class="dark" oncontextmenu="return false">
@@ -34,7 +34,7 @@
           </div>
      </div>
      <div class="modal">
-          <img src="https://te.legra.ph/file/76993558d6cfdfe2ac02a.jpg" alt="">
+          <img src="https://graph.org/file/a796053f53e6ea7ac9151.jpg" alt="">
           <div class="close"></div>
      </div>
      <div id="container" class="container">
